Add master-details page

--- a/app/core/navigation/side-drawer-items.component.html
+++ b/app/core/navigation/side-drawer-items.component.html
@@ -3,9 +3,14 @@
 		<Label col="0" text="&#xf015;" class="fa"></Label>
 		<Label col="2" text="Profile" class="p-r-10"></Label>
 	</GridLayout>
-	
+
 	<GridLayout columns="auto, 10, *" class="sidedrawer-list-item" (tap)="open('terms')">
 		<Label col="0" text="&#xf015;" class="fa"></Label>
 		<Label col="2" text="Terms and Conditions" class="p-r-10"></Label>
+	</GridLayout>
+
+	<GridLayout columns="auto, 10, *" class="sidedrawer-list-item" (tap)="open('master')">
+		<Label col="0" text="&#xf015;" class="fa"></Label>
+		<Label col="2" text="Master detail" class="p-r-10"></Label>
 	</GridLayout>
 </StackLayout>
