--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,4 +1,5 @@
-<RadSideDrawer>
+<!-- <page-router-outlet></page-router-outlet> -->
+<RadSideDrawer >
     <ScrollView tkDrawerContent>
         <side-drawer-items></side-drawer-items>
     </ScrollView>
