Add reports page

--- a/app/core/navigation/side-drawer-items.component.html
+++ b/app/core/navigation/side-drawer-items.component.html
@@ -13,4 +13,9 @@
 		<Label col="0" text="&#xf015;" class="fa"></Label>
 		<Label col="2" text="Master detail" class="p-r-10"></Label>
 	</GridLayout>
+
+	<GridLayout columns="auto, 10, *" class="sidedrawer-list-item" (tap)="open('reports')">
+		<Label col="0" text="&#xf015;" class="fa"></Label>
+		<Label col="2" text="Reports" class="p-r-10"></Label>
+	</GridLayout>
 </StackLayout>
