--- a/app/core/navigation/side-drawer-items.component.html
+++ b/app/core/navigation/side-drawer-items.component.html
@@ -1,21 +1,27 @@
-<StackLayout class="sidedrawer">
-	<GridLayout columns="auto, 10, *" class="sidedrawer-list-item" (tap)="open('profile')">
-		<Label col="0" text="&#xf015;" class="fa"></Label>
-		<Label col="2" text="Profile" class="p-r-10"></Label>
-	</GridLayout>
+<StackLayout class="sidedrawer-left">
+	<StackLayout class="sidedrawer-content">
+		<GridLayout columns="auto, 10, *" class="sidedrawer-list-item" (tap)="open('profile')">
+			<Label col="0" text="&#xf015;" class="fa p-l-10 text-primary"></Label>
+			<Label col="2" text="Profile" class="p-r-10 text-primary"></Label>
+		</GridLayout>
+		<StackLayout class="hr-light m-10"></StackLayout>
 
-	<GridLayout columns="auto, 10, *" class="sidedrawer-list-item" (tap)="open('terms')">
-		<Label col="0" text="&#xf015;" class="fa"></Label>
-		<Label col="2" text="Terms and Conditions" class="p-r-10"></Label>
-	</GridLayout>
+		<GridLayout columns="auto, 10, *" class="sidedrawer-list-item" (tap)="open('terms')">
+			<Label col="0" text="&#xf015;" class="fa p-l-10 text-primary"></Label>
+			<Label col="2" text="Terms and Conditions" class="p-r-10 text-primary"></Label>
+		</GridLayout>
+		<StackLayout class="hr-light m-10"></StackLayout>
 
-	<GridLayout columns="auto, 10, *" class="sidedrawer-list-item" (tap)="open('master')">
-		<Label col="0" text="&#xf015;" class="fa"></Label>
-		<Label col="2" text="Master detail" class="p-r-10"></Label>
-	</GridLayout>
+		<GridLayout columns="auto, 10, *" class="sidedrawer-list-item" (tap)="open('master')">
+			<Label col="0" text="&#xf073;" class="fa p-l-10 text-primary"></Label>
+			<Label col="2" text="Master detail" class="p-r-10 text-primary"></Label>
+		</GridLayout>
+		<StackLayout class="hr-light m-10"></StackLayout>
 
-	<GridLayout columns="auto, 10, *" class="sidedrawer-list-item" (tap)="open('reports')">
-		<Label col="0" text="&#xf015;" class="fa"></Label>
-		<Label col="2" text="Reports" class="p-r-10"></Label>
-	</GridLayout>
+		<GridLayout columns="auto, 10, *" class="sidedrawer-list-item" (tap)="open('my-customers')">
+			<Label col="0" text="&#xf2bb;" class="fa p-l-10 text-primary"></Label>
+			<Label col="2" text="My Customers" class="p-r-10 text-primary"></Label>
+		</GridLayout>
+		<StackLayout class="hr-light m-10"></StackLayout>
+	</StackLayout>
 </StackLayout>
