--- a/app/master-details/customers-detail/customers-detail.component.html
+++ b/app/master-details/customers-detail/customers-detail.component.html
@@ -1,20 +1,40 @@
 <GridLayout hideNavBar class="page page-content">
     <StackLayout>
-        <Label class="action-bar-title" [text]="customer.name"></Label>
-        <Label class="action-bar-title" text="Info"></Label>
+        <Label class="action-bar-title" [text]="customer.name" class="m-l-7 list-group-item-heading text-primary text-left font-weight-bold"></Label>
+        <Label class="action-bar-title" text="Info" class="m-l-5 list-group-item-heading text-primary text-left font-weight-bold"></Label>
         <StackLayout class="list-group-item">
-            <Label text="Address"></Label>
-            <Label [text]="customer.contact.address"></Label>
+            <Label text="Address" class="m-l-5 list-group-item-heading text-primary text-left"></Label>
+            <Label [text]="customer.contact.address" class="m-l-5 list-group-item-text text-muted text-left"></Label>
         </StackLayout>
         <StackLayout class="list-group-item">
-            <Label text="Phone"></Label>
-            <Label [text]="customer.contact.phone"></Label>
+            <Label text="Phone" class="m-l-5 list-group-item-heading text-primary text-left"></Label>
+            <Label [text]="customer.contact.phone" class="m-l-5 list-group-item-text text-muted text-left"></Label>
         </StackLayout>
 
-        <GridLayout columns="auto, auto" rows="auto, auto">
-            <Image col="0" rowSpan="2" [src]="customer.contact.picture" width="20" height="20"></Image>
-            <Label col="1" row="0" [text]="customer.name"></Label>
-            <Label col="1" row="1" [text]="customer.contact.occupation"></Label>
-        </GridLayout>
+        <StackLayout class="list-group-item">
+            <Label text="Contact" class="m-l-5 list-group-item-heading text-primary text-left"></Label>
+            <GridLayout columns="auto, auto" rows="auto, auto">
+                <Image col="0" rowSpan="2" [src]="customer.contact.picture" width="30" height="30" class="thumb img-circle"></Image>
+                <Label col="1" row="0" [text]="customer.name" class="m-l-5 list-group-item-text text-muted text-left"></Label>
+                <Label col="1" row="1" [text]="customer.contact.occupation" class="m-l-5 list-group-item-text text-muted text-left"></Label>
+            </GridLayout>
+        </StackLayout>
+
+        <StackLayout class="list-group-item">
+            <Label text="Overview" class="m-l-5 list-group-item-heading text-primary text-left font-weight-bold"></Label>
+            <GridLayout columns="*, *" rows="120">
+                <RadPieChart allowAnimation="true" col="0">
+                    <DonutSeries tkPieSeries selectionMode="DataPoint" expandRadius="0.8" outerRadiusFactor="0.9" innerRadiusFactor="0.9" [items]="categoricalSource"
+                        valueProperty="amount" legendLabel="label"></DonutSeries>
+                    <RadLegendView tkPieLegend position="Right" title="Planned vs. Ordered" offsetOrigin="Right" width="110" titleColor="#30bcff"></RadLegendView>
+                </RadPieChart>
+
+                <RadPieChart allowAnimation="true" col="1">
+                    <DonutSeries tkPieSeries selectionMode="DataPoint" expandRadius="0.8" outerRadiusFactor="0.9" innerRadiusFactor="0.9" [items]="categoricalSource"
+                        valueProperty="amount" legendLabel="label"></DonutSeries>
+                    <RadLegendView tkPieLegend position="Right" title="Revenue" offsetOrigin="Right" width="110" titleColor="#30bcff"></RadLegendView>
+                </RadPieChart>
+            </GridLayout>
+        </StackLayout>
     </StackLayout>
 </GridLayout>
