--- a/app/reports/reports-list.component.html
+++ b/app/reports/reports-list.component.html
@@ -1,4 +1,4 @@
-<StackLayout hideNavBar class="page page-content">
+<StackLayout modalNavBar class="page page-content">
     <RadDataForm tkExampleTitle tkToggleNavButton [source]="report">
         <TKPropertyGroup tkDataFormGroups name="" hidden="false">
             <TKDataFormGridLayout tkPropertyGroupLayout></TKDataFormGridLayout>
@@ -39,22 +39,3 @@
     </GridLayout>
     <ActivityIndicator [busy]="isLoading"></ActivityIndicator>
 </StackLayout>
-
-<GridLayout [visibility]="showingLongListPicker ? 'visible' : 'collapsed'" rows="*, auto, *" columns="30, *, 30">
-    <GridLayout style="background-color: rgba(0,0,0,0.8);" rowSpan="3" colSpan="3" #longListPickerDimmer></GridLayout>
-    <StackLayout row="1" col="1" #longListPickerContainer style="background-color: white; border-radius: 10;">
-        <StackLayout>
-            <ListView [items]="itemsToShow" class="list-group" height="300" (itemTap)="chooseLongList($event)">
-                <ng-template let-item="item" let-odd="odd" let-even="even">
-                    <StackLayout>
-                        <Label [text]="item" class="list-group-item"></Label>
-
-                    </StackLayout>
-                </ng-template>
-            </ListView>
-        </StackLayout>
-        <GridLayout columns="auto, *, auto" style="background-color: #E0E0E0;" paddingTop="5" paddingBottom="5">
-            <Button class="transBtn sm" text="Cancel" (tap)="closeLongListPicker()"></Button>
-        </GridLayout>
-    </StackLayout>
-</GridLayout>
