--- a/app/place-order/place-order-list.component.html
+++ b/app/place-order/place-order-list.component.html
@@ -11,21 +11,24 @@
 
     <StackLayout class="hr-light m-10"></StackLayout>
 
-    <GridLayout columns="*, *, *, *, *" rows="auto, auto">
+    <GridLayout columns="*, *, *, *, *, *" rows="auto, auto">
         <Label col="0" row="0" text="Product Name"></Label>
         <Label col="1" row="0" text="Unit Price"></Label>
         <Label col="2" row="0" text="Unit In Stock"></Label>
         <Label col="3" row="0" text="Promo"></Label>
         <Label col="4" row="0" text="Quantity"></Label>
+        <Label col="5" row="0" text="Total"></Label>
 
-        <GridLayout colSpan="5" row="1">
+        <GridLayout colSpan="6" rows="300" row="1">
             <RadListView [items]="products" class="list-group">
                 <ng-template tkListItemTemplate let-product="item">
-                    <GridLayout columns="*, *, *, *, *" rows="auto">
+                    <GridLayout columns="*, *, *, *, *, *" rows="auto">
                         <Label col="0" [text]="product.productName"></Label>
                         <Label col="1" [text]="product.unitPrice"></Label>
                         <Label col="2" [text]="product.unitInStock"></Label>
                         <Label col="3" [text]="product.promo | questionableBoolean"></Label>
+                        <TextField col="4" keyboardType="number" [(ngModel)]="product.quantity"></TextField>
+                        <Label col="5" [text]="product.quantity | totalPrice: product.unitPrice"></Label>
                     </GridLayout>
                 </ng-template>
             </RadListView>
@@ -35,7 +38,7 @@
     <StackLayout class="hr-light m-10"></StackLayout>
     <GridLayout columns="*, *" rows="auto, auto">
         <Label col="0" row="0" text="Order Total"></Label>
-        <Label col="1" row="0" text="$1,098.00" class="text-right"></Label>
+        <Label col="1" row="0" [text]="totalOrder" class="text-right"></Label>
     </GridLayout>
     <ActivityIndicator [busy]="isLoading"></ActivityIndicator>
 </StackLayout>
