--- a/app/my-customers/customers-detail/customers-detail.component.html
+++ b/app/my-customers/customers-detail/customers-detail.component.html
@@ -1,4 +1,4 @@
-<ContentView height="100%" width="100%">
+<ContentView customNavBar height="100%" width="100%">
     <Mapbox
         #map
         [accessToken]="accessToken"
