--- a/app/reports/reports-list.component.html
+++ b/app/reports/reports-list.component.html
@@ -1,4 +1,4 @@
-<StackLayout modalNavBar class="page page-content">
+<StackLayout hideNavBar class="page page-content">
     <RadDataForm tkExampleTitle tkToggleNavButton [source]="report">
         <TKPropertyGroup tkDataFormGroups name="" hidden="false">
             <TKDataFormGridLayout tkPropertyGroupLayout></TKDataFormGridLayout>
