--- a/app/master-details/customers-detail/customers-detail.component.html
+++ b/app/master-details/customers-detail/customers-detail.component.html
@@ -1,4 +1,4 @@
-<GridLayout modalNavBar class="page page-content">
+<GridLayout customNavBar class="page page-content">
     <StackLayout>
         <Label class="action-bar-title" [text]="customer.name" class="m-l-7 list-group-item-heading text-primary text-left font-weight-bold"></Label>
         <Label class="action-bar-title" text="Info" class="m-l-5 list-group-item-heading text-primary text-left font-weight-bold"></Label>
