--- a/app/core/navigation/tabs.component.html
+++ b/app/core/navigation/tabs.component.html
@@ -1,6 +1,6 @@
-<TabView androidTabsPosition="bottom" tabTextFontSize="20" class="page page-content" (loaded)="onTabViewLoaded($event)">
-	<page-router-outlet *tabItem="{ title: 'Agenda' }" name="agendaTab"></page-router-outlet>
-	<page-router-outlet *tabItem="{ title: 'Customers' }" name="customersTab"></page-router-outlet>
-	<page-router-outlet *tabItem="{ title: 'Reports' }" name="reportsTab"></page-router-outlet>
-	<page-router-outlet *tabItem="{ title: 'Inbox' }" name="inboxTab"></page-router-outlet>
+<TabView androidTabsPosition="bottom" tabTextFontSize="20" class="page page-content fa" (loaded)="onTabViewLoaded($event)">
+	<page-router-outlet *tabItem="{ title: '&#xf073;' }" name="agendaTab"></page-router-outlet>
+	<page-router-outlet *tabItem="{ title: '&#xf278;' }" name="customersTab"></page-router-outlet>
+	<page-router-outlet *tabItem="{ title: '&#xf080;' }" name="reportsTab"></page-router-outlet>
+	<page-router-outlet *tabItem="{ title: '&#xf01c;' }" name="inboxTab"></page-router-outlet>
 </TabView>
