Introduce backend service

--- a/app/place-order/confirm-order/confirm-order.component.html
+++ b/app/place-order/confirm-order/confirm-order.component.html
@@ -54,7 +54,7 @@
     <StackLayout class="hr-light m-10"></StackLayout>
     <GridLayout columns="*, *" rows="auto, auto">
         <Label col="0" row="0" text="Order Total"></Label>
-        <Label col="1" row="0" [text]="total" class="text-right"></Label>
+        <Label col="1" row="0" [text]="totalOrder" class="text-right"></Label>
     </GridLayout>
 
 </StackLayout>
