--- a/app/place-order/confirm-order/confirm-order.component.html
+++ b/app/place-order/confirm-order/confirm-order.component.html
@@ -22,39 +22,38 @@
     </StackLayout>
 
     <ng-template #loading>
-    <ActivityIndicator [busy]="isLoading"></ActivityIndicator>
+        <ActivityIndicator [busy]="isLoading"></ActivityIndicator>
     </ng-template>
 
     <StackLayout class="hr-light m-10"></StackLayout>
 
-    <GridLayout columns="*, *, *, *, *, *" rows="auto, auto">
+    <GridLayout columns="*, *" rows="auto, auto">
+        <Label col="0" row="0" text="Order Total"></Label>
+        <Label col="1" row="0" [text]="totalOrder" class="text-right"></Label>
+    </GridLayout>
+
+    <StackLayout class="hr-light m-10"></StackLayout>
+
+    <GridLayout columns="*, *, *, *, *, *" rows="auto">
         <Label col="0" row="0" text="Product Name"></Label>
         <Label col="1" row="0" text="Unit Price"></Label>
         <Label col="2" row="0" text="Unit In Stock"></Label>
         <Label col="3" row="0" text="Promo"></Label>
         <Label col="4" row="0" text="Quantity"></Label>
         <Label col="5" row="0" text="Total"></Label>
-
-        <GridLayout colSpan="6" rows="300" row="1">
-            <RadListView [items]="products" class="list-group">
-                <ng-template tkListItemTemplate let-product="item">
-                    <GridLayout columns="*, *, *, *, *, *" rows="auto">
-                        <Label col="0" [text]="product.productName"></Label>
-                        <Label col="1" [text]="product.unitPrice"></Label>
-                        <Label col="2" [text]="product.unitInStock"></Label>
-                        <Label col="3" [text]="product.promo | questionableBoolean"></Label>
-                        <Label col="4" [text]="product.quantity"></Label>
-                        <Label col="5" [text]="product.quantity | totalPrice: product.unitPrice"></Label>
-                    </GridLayout>
-                </ng-template>
-            </RadListView>
-
-        </GridLayout>
     </GridLayout>
-    <StackLayout class="hr-light m-10"></StackLayout>
-    <GridLayout columns="*, *" rows="auto, auto">
-        <Label col="0" row="0" text="Order Total"></Label>
-        <Label col="1" row="0" [text]="totalOrder" class="text-right"></Label>
+    <GridLayout>
+        <RadListView [items]="products" class="list-group">
+            <ng-template tkListItemTemplate let-product="item">
+                <GridLayout columns="*, *, *, *, *, *" rows="auto">
+                    <Label col="0" [text]="product.productName"></Label>
+                    <Label col="1" [text]="product.unitPrice"></Label>
+                    <Label col="2" [text]="product.unitInStock"></Label>
+                    <Label col="3" [text]="product.promo | questionableBoolean"></Label>
+                    <Label col="4" [text]="product.quantity"></Label>
+                    <Label col="5" [text]="product.quantity | totalPrice: product.unitPrice"></Label>
+                </GridLayout>
+            </ng-template>
+        </RadListView>
     </GridLayout>
-
 </StackLayout>
