--- a/app/place-order/place-order-list.component.html
+++ b/app/place-order/place-order-list.component.html
@@ -1,4 +1,4 @@
-<StackLayout modalNavBar class="page page-content">
+<StackLayout customNavBar class="page page-content">
     <RadDataForm tkExampleTitle tkToggleNavButton [source]="orderOptions">
         <TKPropertyGroup tkDataFormGroups name="" hidden="false">
             <TKDataFormGridLayout tkPropertyGroupLayout></TKDataFormGridLayout>
