--- a/app/_app-common.scss
+++ b/app/_app-common.scss
@@ -1,4 +1,3 @@
-
 .fa {
   font-family: "FontAwesome";
 }
@@ -11,6 +10,11 @@
 
 .hidden {
   visibility: collapsed;
+}
+
+ActionBar {
+  background-color : #008EFF;
+  color: white
 }
 
 // ActionBar
