Remove custom nav bar directive.

--- a/app/login/login.component.html
+++ b/app/login/login.component.html
@@ -1,4 +1,4 @@
-<FlexboxLayout class="page">
+<FlexboxLayout hideNavBar class="page">
 	<StackLayout class="form">
 		<Label class="header" text="Acme Trader"></Label>
 
