--- a/app/inbox/inbox-detail/inbox-detail.component.html
+++ b/app/inbox/inbox-detail/inbox-detail.component.html
@@ -1,4 +1,7 @@
-<GridLayout class="page page-content">
+<GridLayout showNavBar class="page page-content">
+    <ActionBar title="">
+        <NavigationButton text="Go Back" android.systemIcon="ic_menu_back" (tap)="goBack()"></NavigationButton>
+    </ActionBar>
     <StackLayout>
         <Label class="action-bar-title" [text]="message.title" class="m-l-7 list-group-item-heading text-primary text-left font-weight-bold"></Label>
         <StackLayout class="list-group-item">
