--- a/app/master-details/customers-detail/customers-detail.component.html
+++ b/app/master-details/customers-detail/customers-detail.component.html
@@ -1,4 +1,9 @@
-<GridLayout customNavBar class="page page-content">
+<GridLayout showNavBar class="page page-content">
+    <ActionBar title="">
+        <NavigationButton text="Go Back" android.systemIcon="ic_menu_back" (tap)="goBack()"></NavigationButton>
+        <ActionItem text="Place order" ios.position="right" (tap)="placeOrder()"></ActionItem>
+        <ActionItem text="View map" ios.position="right" (tap)="viewMap()"></ActionItem>
+    </ActionBar>
     <StackLayout>
         <Label class="action-bar-title" [text]="customer.name" class="m-l-7 list-group-item-heading text-primary text-left font-weight-bold"></Label>
         <Label class="action-bar-title" text="Info" class="m-l-5 list-group-item-heading text-primary text-left font-weight-bold"></Label>
