--- a/app/place-order/confirm-order/confirm-order.component.html
+++ b/app/place-order/confirm-order/confirm-order.component.html
@@ -1,4 +1,8 @@
-<StackLayout customNavBar class="page page-content">
+<StackLayout showNavBar class="page page-content">
+    <ActionBar title="">
+        <NavigationButton text="Go Back" android.systemIcon="ic_menu_back" (tap)="goBack()"></NavigationButton>
+        <ActionItem text="Submit order" ios.position="right" (tap)="submitOrder()"></ActionItem>
+    </ActionBar>
     <StackLayout *ngIf="customer | async; let customer; else loading">
         <Label class="action-bar-title" [text]="customer.name" class="m-l-7 list-group-item-heading text-primary text-left font-weight-bold"></Label>
         <Label class="action-bar-title" text="Info" class="m-l-5 list-group-item-heading text-primary text-left font-weight-bold"></Label>
