--- a/app/inbox/inbox-detail/inbox-detail.component.html
+++ b/app/inbox/inbox-detail/inbox-detail.component.html
@@ -1,6 +1,8 @@
 <GridLayout showNavBar class="page page-content">
     <ActionBar title="">
-        <NavigationButton text="Go Back" android.systemIcon="ic_menu_back" (tap)="goBack()"></NavigationButton>
+        <NavigationButton *ifAndroid android.systemIcon="ic_menu_back" (tap)="goBack()"></NavigationButton>
+        <NavigationButton *ifIos visibility="collapse"></NavigationButton>
+        <ActionItem *ifIos ios.systemIcon="8" (tap)="goBack()"></ActionItem>
     </ActionBar>
     <StackLayout>
         <Label class="action-bar-title" [text]="message.title" class="m-l-7 list-group-item-heading text-primary text-left font-weight-bold"></Label>
