--- a/app/master-details/customers-detail/customers-detail.component.html
+++ b/app/master-details/customers-detail/customers-detail.component.html
@@ -1,6 +1,9 @@
 <GridLayout showNavBar class="page page-content">
     <ActionBar title="">
-        <NavigationButton text="Go Back" android.systemIcon="ic_menu_back" (tap)="goBack()"></NavigationButton>
+        <NavigationButton *ifAndroid android.systemIcon="ic_menu_back" (tap)="goBack()"></NavigationButton>
+        <NavigationButton *ifIos visibility="collapse"></NavigationButton>
+        <ActionItem *ifIos ios.systemIcon="8" (tap)="goBack()"></ActionItem>
+
         <ActionItem text="Place order" ios.position="right" (tap)="placeOrder()"></ActionItem>
         <ActionItem text="View map" ios.position="right" (tap)="viewMap()"></ActionItem>
     </ActionBar>
