--- a/app/place-order/place-order-list.component.html
+++ b/app/place-order/place-order-list.component.html
@@ -1,6 +1,9 @@
 <StackLayout showNavBar customNavBar class="page page-content">
     <ActionBar title="">
-        <NavigationButton text="Go Back" android.systemIcon="ic_menu_back" (tap)="goBack()"></NavigationButton>
+        <NavigationButton *ifAndroid android.systemIcon="ic_menu_back" (tap)="goBack()"></NavigationButton>
+        <NavigationButton *ifIos visibility="collapse"></NavigationButton>
+        <ActionItem *ifIos ios.systemIcon="8" (tap)="goBack()"></ActionItem>
+
         <ActionItem text="Confirm order" ios.position="right" (tap)="confirmOrder()"></ActionItem>
     </ActionBar>
     <StackLayout>
