--- a/app/place-order/place-order-list.component.html
+++ b/app/place-order/place-order-list.component.html
@@ -1,4 +1,4 @@
-<StackLayout showNavBar customNavBar class="page page-content">
+<StackLayout showNavBar goBack customNavBar class="page page-content">
     <ActionBar title="">
         <NavigationButton *ifAndroid android.systemIcon="ic_menu_back" (tap)="goBack()"></NavigationButton>
         <NavigationButton *ifIos visibility="collapse"></NavigationButton>
