--- a/app/place-order/confirm-order/confirm-order.component.html
+++ b/app/place-order/confirm-order/confirm-order.component.html
@@ -1,8 +1,5 @@
-<StackLayout showNavBar goBack class="page page-content">
+<StackLayout showNavBar modalGoBack class="page page-content">
     <ActionBar title="">
-        <NavigationButton *ifAndroid android.systemIcon="ic_menu_back" (tap)="goBack()"></NavigationButton>
-        <NavigationButton *ifIos visibility="collapse"></NavigationButton>
-        <ActionItem *ifIos ios.systemIcon="8" (tap)="goBack()"></ActionItem>
         <ActionItem text="Submit order" ios.position="right" (tap)="submitOrder()"></ActionItem>
     </ActionBar>
     <StackLayout *ngIf="customer | async; let customer; else loading">
