--- a/app/login/login.component.html
+++ b/app/login/login.component.html
@@ -1,30 +1,40 @@
-<FlexboxLayout hideNavBar class="page">
-	<StackLayout class="form">
-		<Label class="header" text="Acme Trader"></Label>
+<GridLayout hideNavBar>
+	<FlexboxLayout class="page" *ngIf="!isLoading; else loading">
+		<StackLayout class="form">
+			<Label class="header" text="Acme Trader"></Label>
 
-		<StackLayout class="input-field">
-			<TextField class="input" hint="Username" autocorrect="false" autocapitalizationType="none" [(ngModel)]="user.username" returnKeyType="next" (returnPress)="focusPassword()"></TextField>
-			<StackLayout class="hr-light"></StackLayout>
+			<StackLayout class="input-field">
+				<TextField class="input" hint="Username" autocorrect="false" autocapitalizationType="none" [(ngModel)]="user.username" returnKeyType="next"
+				 (returnPress)="focusPassword()"></TextField>
+				<StackLayout class="hr-light"></StackLayout>
+			</StackLayout>
+
+			<StackLayout class="input-field">
+				<TextField #password class="input" hint="Password" secure="true" [(ngModel)]="user.password" [returnKeyType]="isLoggingIn ? 'done' : 'next'"
+				 (returnPress)="focusConfirmPassword()"></TextField>
+				<StackLayout class="hr-light"></StackLayout>
+			</StackLayout>
+
+			<StackLayout *ngIf="!isLoggingIn" class="input-field">
+				<TextField #confirmPassword class="input" hint="Confirm password" secure="true" [(ngModel)]="user.confirmPassword" returnKeyType="done"></TextField>
+				<StackLayout class="hr-light"></StackLayout>
+			</StackLayout>
+
+			<Button [text]="isLoggingIn ? 'Log In' : 'Sign Up'" (tap)="submit()" class="btn btn-primary m-t-20"></Button>
+			<Label *ngIf="isLoggingIn" text="Forgot your password?" class="login-label" (tap)="forgotPassword()"></Label>
+
+			<Button *ngIf="isLoggingIn" text="Log in with MIC" (tap)="submitWithMic()" class="btn btn-primary m-t-20"></Button>
 		</StackLayout>
 
-		<StackLayout class="input-field">
-			<TextField #password class="input" hint="Password" secure="true" [(ngModel)]="user.password" [returnKeyType]="isLoggingIn ? 'done' : 'next'" (returnPress)="focusConfirmPassword()"></TextField>
-			<StackLayout class="hr-light"></StackLayout>
-		</StackLayout>
+		<Label class="login-label sign-up-label" (tap)="toggleForm()">
+			<FormattedString>
+				<Span [text]="isLoggingIn ? 'Don’t have an account? ' : 'Back to Login'"></Span>
+				<Span [text]="isLoggingIn ? 'Sign up' : ''" class="bold"></Span>
+			</FormattedString>
+		</Label>
+	</FlexboxLayout>
 
-		<StackLayout *ngIf="!isLoggingIn" class="input-field">
-			<TextField #confirmPassword class="input" hint="Confirm password" secure="true" [(ngModel)]="user.confirmPassword" returnKeyType="done"></TextField>
-			<StackLayout class="hr-light"></StackLayout>
-		</StackLayout>
-
-		<Button [text]="isLoggingIn ? 'Log In' : 'Sign Up'" (tap)="submit()" class="btn btn-primary m-t-20"></Button>
-		<Label *ngIf="isLoggingIn" text="Forgot your password?" class="login-label" (tap)="forgotPassword()"></Label>
-	</StackLayout>
-
-	<Label class="login-label sign-up-label" (tap)="toggleForm()">
-		<FormattedString>
-			<Span [text]="isLoggingIn ? 'Don’t have an account? ' : 'Back to Login'"></Span>
-			<Span [text]="isLoggingIn ? 'Sign up' : ''" class="bold"></Span>
-		</FormattedString>
-	</Label>
-</FlexboxLayout>
+	<ng-template #loading>
+		<ActivityIndicator [busy]="true"></ActivityIndicator>
+	</ng-template>
+</GridLayout>
