--- a/app/place-order/confirm-order/confirm-order.component.html
+++ b/app/place-order/confirm-order/confirm-order.component.html
@@ -1,4 +1,4 @@
-<StackLayout showNavBar modalGoBack class="page page-content">
+<StackLayout showNavBar goBack class="page page-content">
     <ActionBar title="">
         <ActionItem text="Submit order" ios.position="right" (tap)="submitOrder()"></ActionItem>
     </ActionBar>
