--- a/app/place-order/place-order-list.component.html
+++ b/app/place-order/place-order-list.component.html
@@ -1,4 +1,4 @@
-<StackLayout showNavBar modalGoBack customNavBar class="page page-content">
+<StackLayout showNavBar goBack customNavBar class="page page-content">
     <ActionBar title="">
         <ActionItem text="Confirm order" ios.position="right" (tap)="confirmOrder()"></ActionItem>
     </ActionBar>
