--- a/app/agenda/customers-list.component.html
+++ b/app/agenda/customers-list.component.html
@@ -9,5 +9,11 @@
         </ng-template>
     </RadListView>
 
+    <!-- <RadPieChart allowAnimation="true">
+        <DonutSeries tkPieSeries selectionMode="DataPoint" expandRadius="0.8" outerRadiusFactor="0.9" innerRadiusFactor="0.9"
+            [items]="customers" valueProperty="loyal" legendLabel="name"></DonutSeries>
+        <RadLegendView tkPieLegend position="Right" title="Revenue" offsetOrigin="Right" width="110" titleColor="#30bcff"></RadLegendView>
+    </RadPieChart> -->
+
     <ActivityIndicator [busy]="isLoading"></ActivityIndicator>
 </GridLayout>
